fix(Organizations): Handle error on projects fetch
fix(Organizations): Handle error on projects fetch

--- a/src/components/Settings/Settings.scss
+++ b/src/components/Settings/Settings.scss
@@ -248,6 +248,11 @@
     top: 0;
     visibility: hidden;
 
+    &:disabled,
+    &:disabled + label {
+      opacity: 0.5;
+    }
+
     &:before {
       visibility: visible;
       content: '';
