--- a/public/global.css
+++ b/public/global.css
@@ -27,6 +27,7 @@ body {
 }
 
 body {
+  overflow: hidden;
   background-color: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
