--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -1,81 +1,72 @@
 .skz-modal {
-  position: absolute;
-  z-index: 5;
-  background-color: rgba(245, 245, 245, 0.5);
-  top: 32px;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  overflow: hidden;
-  backdrop-filter: blur(15px);
+	z-index: 5;
+	background-color: rgba(245, 245, 245, 0.5);
+	display: flex;
+	overflow: hidden;
+	backdrop-filter: blur(15px);
 
-  &-container {
-    background-color: #f5f5f5;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    box-shadow: 1px 1px 6px #888;
-    border: 1px solid #888;
-    width: 70%;
-    height: 70%;
-    right: 15%;
-    bottom: 15%;
-    padding: 1rem;
-  }
+	&-container {
+		width: 100%;
+		background-color: #f5f5f5;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		box-shadow: 1px 1px 6px #888;
+		border: 1px solid #888;
+		padding: 1rem;
+	}
 
-  &-header {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 1rem;
-    height: 10%;
-    color: #00008f;
-  }
+	&-header {
+		display: none;
+		justify-content: space-between;
+		flex-direction: row;
+		border-bottom: 1px solid #ccc;
+		padding-bottom: 1rem;
+		color: #00008f;
 
-  &-body {
-    height: 80%;
-    margin: 0.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-  }
+		&--show {
+			display: flex;
+		}
+	}
 
-  &-footer {
-    height: 10%;
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: row;
-    border-top: 1px solid #ccc;
-    padding-top: 1rem;
-    color: #333;
-  }
+	&-body {
+		margin: 0.5rem;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: row;
+	}
 
-  @media (prefers-color-scheme: dark) {
-    background-color: #333c;
+	&-footer {
+		display: none;
+		justify-content: flex-end;
+		flex-direction: row;
+		border-top: 1px solid #ccc;
+		padding-top: 1rem;
+		color: #333;
 
-    &-container {
-      background-color: #333;
-      box-shadow: 1px 1px 6px #222;
-      border: 1px solid #222;
-    }
+		&--show {
+			display: flex;
+		}
+	}
 
-    &-header {
-      color: #ccc;
-      border-bottom: 1px solid #444;
-    }
+	@media (prefers-color-scheme: dark) {
+		background-color: #333c;
 
-    &-body {
-      height: 80%;
-    }
+		&-container {
+			background-color: #333;
+			box-shadow: 1px 1px 6px #222;
+			border: 1px solid #222;
+		}
 
-    &-footer {
-      height: 10%;
-      color: #f5f5f5;
-      border-top: 1px solid #444;
-    }
-  }
+		&-header {
+			color: #ccc;
+			border-bottom: 1px solid #444;
+		}
+
+		&-footer {
+			color: #f5f5f5;
+			border-top: 1px solid #444;
+		}
+	}
 }
