feature(Electron): configure electron environnement

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,94 +1,94 @@
 .skz-projects {
-  margin: -1rem;
-  display: flex;
-  flex-direction: column;
-  height: calc(100vh - 250px);
-  font-family: 'Source Sans Pro', sans-serif;
+	margin: -1rem;
+	display: flex;
+	flex-direction: column;
+	height: calc(100vh - 250px);
+	font-family: 'Source Sans Pro', sans-serif;
 
-  &__header {
-    position: relative;
-    display: flex;
-    flex: 0 0 auto;
-    border-bottom: 1px solid #eee;
+	&__header {
+		position: relative;
+		display: flex;
+		flex: 0 0 auto;
+		border-bottom: 1px solid #eee;
 
-    h2 {
-      flex: 0 0 40%;
-      align-self: center;
-      margin-bottom: 0;
-      font-size: 0.8rem;
-      font-weight: bold;
-      color: #00008f;
-      text-align: center;
-    }
-  }
+		h2 {
+			flex: 0 0 40%;
+			align-self: center;
+			margin-bottom: 0;
+			font-size: 0.8rem;
+			font-weight: bold;
+			color: #00008f;
+			text-align: center;
+		}
+	}
 
-  &__search {
-    position: relative;
-    flex: 0 0 60%;
+	&__search {
+		position: relative;
+		flex: 0 0 60%;
 
-    &:before {
-      content: '\EAF0';
-      position: absolute;
-      left: 0.5rem;
-      top: 50%;
-      font-family: 'Icons';
-      transform: translatey(-50%);
-    }
+		&:before {
+			content: '\EAF0';
+			position: absolute;
+			left: 0.5rem;
+			top: 50%;
+			font-family: 'Icons';
+			transform: translatey(-50%);
+		}
 
-    [type='text'] {
-      width: 100%;
-      padding: 0.5rem 0.5rem 0.5rem 2rem;
-      color: #333;
-      border: 0;
-      background-color: transparent;
+		[type='text'] {
+			width: 100%;
+			padding: 0.5rem 0.5rem 0.5rem 2rem;
+			color: #333;
+			border: 0;
+			background-color: transparent;
 
-      @media (prefers-color-scheme: dark) {
-        color: #fff;
-      }
-    }
-  }
+			@media (prefers-color-scheme: dark) {
+				color: #fff;
+			}
+		}
+	}
 
-  &__refresh {
-    position: absolute;
-    right: 8px;
-    top: 50%;
-    height: 1rem;
-    padding: 0 0.5rem;
-    font-size: 0.6rem;
-    color: #3032c1;
-    cursor: pointer;
-    border-radius: 4px;
-    border: 1px solid #3032c1;
-    background-color: transparent;
-    transform: translateY(-50%);
-  }
+	&__refresh {
+		position: absolute;
+		right: 8px;
+		top: 50%;
+		height: 1rem;
+		padding: 0 0.5rem;
+		font-size: 0.6rem;
+		color: #3032c1;
+		cursor: pointer;
+		border-radius: 4px;
+		border: 1px solid #3032c1;
+		background-color: transparent;
+		transform: translateY(-50%);
+	}
 
-  &__list-container {
-    position: relative;
-    flex: 1 0 auto;
-    overflow: scroll;
-    height: 100%;
-    padding-bottom: 1rem;
-  }
+	&__list-container {
+		position: relative;
+		flex: 1 0 auto;
+		overflow: hidden visible;
+		height: 100%;
+		padding-bottom: 1rem;
+	}
 
-  &__list {
-    list-style: none;
-  }
+	&__list {
+		list-style: none;
+	}
 
-  &__empty {
-    position: absolute;
-    top: 50%;
-    text-align: center;
-    transform: translateY(-50%);
-  }
+	&__empty {
+		position: absolute;
+		top: 50%;
+		text-align: center;
+		transform: translateY(-50%);
+	}
 }
 
 @media (prefers-color-scheme: dark) {
-  .skz-projects__header {
-    border-bottom-color: #333;
+	.skz-projects__header {
+		border-bottom-color: #333;
 
-    h2 {
-      color: #ccc;
-    }
-  }
+		h2 {
+			color: #ccc;
+		}
+	}
 }
