--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -3,175 +3,157 @@
  */
 
 .skz-avatar {
-  position: relative;
-  z-index: 3;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+	position: relative;
+	z-index: 3;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 }
 
 .skz-avatar__gradient {
-  position: absolute;
-  width: 100%;
-  height: 3.33rem;
-  z-index: 1;
+	position: absolute;
+	width: 100%;
+	height: 3.33rem;
+	z-index: 1;
 
-  &--1 {
-    background: linear-gradient(
-      135deg,
-      rgba(2, 113, 128, 1) 0%,
-      rgba(2, 113, 128, 1) 24%,
-      rgba(0, 173, 198, 1) 77%,
-      rgba(0, 173, 198, 1) 100%
-    );
-  }
+	&--1 {
+		background: linear-gradient(135deg, #48c6ef, #6f86d6);
+	}
 
-  &--2 {
-    background: linear-gradient(
-      135deg,
-      rgba(128, 63, 2, 1) 0%,
-      rgba(128, 63, 2, 1) 24%,
-      rgba(198, 113, 0, 1) 77%,
-      rgba(198, 113, 0, 1) 100%
-    );
-  }
+	&--2 {
+		background: linear-gradient(135deg, #fc7864, #fda366);
+	}
 
-  &--3 {
-    background: linear-gradient(
-      135deg,
-      rgba(78, 1, 65, 1) 0%,
-      rgb(107, 1, 89) 24%,
-      rgb(148, 0, 123) 77%,
-      rgb(209, 1, 174) 100%
-    );
-  }
+	&--3 {
+		background: linear-gradient(135deg, #667eea, #764ba2);
+	}
 }
 
 input[type='radio']:checked + .skz-profile__modal-label {
-  background-color: #f07662;
-  color: #fff;
+	background-color: #f07662;
+	color: #fff;
 
-  &:hover {
-    cursor: default;
-  }
+	&:hover {
+		cursor: default;
+	}
 }
 
 input[type='radio'] + .skz-profile__modal-label:after {
-  font-family: 'Icons';
-  content: '\EA44';
-  text-align: center;
+	font-family: 'Icons';
+	content: '\EA44';
+	text-align: center;
 }
 
 input[type='radio']:checked + .skz-profile__modal-label:after {
-  font-family: 'Icons';
-  content: '\EA3A';
-  text-align: center;
+	font-family: 'Icons';
+	content: '\EA3A';
+	text-align: center;
 }
 
 .skz-profile > .skz-profile__modal:before:hover > .skz-avatar__gradient {
-  background-color: #5555;
+	background-color: #5555;
 }
 
 .skz-profile__modal {
-  position: absolute;
-  z-index: 4;
-  cursor: pointer;
-  background-color: transparent;
-  height: 3.33rem;
+	position: absolute;
+	z-index: 4;
+	cursor: pointer;
+	background-color: transparent;
+	height: 3.33rem;
 
-  &:before {
-    content: '\EAC4';
-    position: absolute;
-    color: #ccc;
-    font-size: medium;
-    font-family: 'Icons';
-    padding: 0.2rem;
-  }
+	&:before {
+		content: '\EAC4';
+		position: absolute;
+		color: #ccc;
+		font-size: medium;
+		font-family: 'Icons';
+		padding: 0.2rem;
+	}
 
-  &-close {
-    background-color: #f07662;
-    font-size: 0.8rem;
-    font-weight: bold;
-    color: #fff;
-    padding: 0.5rem;
-    border-radius: 0.5rem;
-    height: 2.5rem;
-    width: 6rem;
-    cursor: pointer;
+	&-close {
+		background-color: #f07662;
+		font-size: 0.8rem;
+		font-weight: bold;
+		color: #fff;
+		padding: 0.5rem;
+		border-radius: 0.5rem;
+		height: 2.5rem;
+		width: 6rem;
+		cursor: pointer;
 
-    &:hover {
-      background-color: #864338;
-    }
-  }
+		&:hover {
+			background-color: #864338;
+		}
+	}
 
-  &-title {
-    height: 15%;
-    text-align: center;
-    border-bottom: 1px solid #f5f5f5;
-    padding-bottom: 0.5rem;
-  }
+	&-title {
+		height: 15%;
+		text-align: center;
+		border-bottom: 1px solid #f5f5f5;
+		padding-bottom: 0.5rem;
+	}
 
-  &-theme {
-    border: 1px solid #333;
-    height: 30%;
-    width: 100%;
-  }
+	&-theme {
+		border: 1px solid #333;
+		height: 30%;
+		width: 100%;
+	}
 
-  &-input {
-    display: none;
-  }
+	&-input {
+		display: none;
+	}
 
-  &-label {
-    background-color: #ccc;
-    padding: 0.5rem;
-    margin: 0.5rem;
-    width: 33%;
-    height: 66%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    border-radius: 0.4rem;
-    cursor: pointer;
+	&-label {
+		background-color: #ccc;
+		padding: 0.5rem;
+		margin: 0.5rem;
+		width: 33%;
+		height: 66%;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		border-radius: 0.4rem;
+		cursor: pointer;
 
-    &:hover {
-      background-color: #aaa;
-    }
-  }
+		&:hover {
+			background-color: #aaa;
+		}
+	}
 
-  @media (prefers-color-scheme: dark) {
-    &-title {
-      color: #eee;
-    }
+	@media (prefers-color-scheme: dark) {
+		&-title {
+			color: #eee;
+		}
 
-    &-label {
-      background-color: #444;
+		&-label {
+			background-color: #444;
 
-      &:hover {
-        background-color: #555;
-      }
+			&:hover {
+				background-color: #555;
+			}
 
-      &:after {
-        color: #eee;
-      }
-    }
-  }
+			&:after {
+				color: #eee;
+			}
+		}
+	}
 }
 
 .skz-avatar__image {
-  position: relative;
-  z-index: 2;
-  display: block;
-  width: 75px;
-  height: 75px;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 50%;
-  border: 2px solid #fff;
-  background-color: #f5f5f5;
+	position: relative;
+	z-index: 2;
+	display: block;
+	width: 75px;
+	height: 75px;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 50%;
+	border: 2px solid #fff;
+	background-color: #f5f5f5;
 }
 
 .skz-profile {
-  position: relative;
-  height: 100%;
+	position: relative;
+	height: 100%;
 }
 
 /**
@@ -179,14 +161,14 @@ input[type='radio']:checked + .skz-profile__modal-label:after {
    */
 
 .skz-profile-name {
-  margin-left: 1rem;
-  margin-right: 1rem;
-  margin-bottom: 1rem;
-  text-align: center;
-  font-size: 0.8rem;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+	margin-left: 1rem;
+	margin-right: 1rem;
+	margin-bottom: 1rem;
+	text-align: center;
+	font-size: 0.8rem;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 /**
@@ -194,44 +176,44 @@ input[type='radio']:checked + .skz-profile__modal-label:after {
    */
 
 .skz-profile-nav {
-  position: relative;
-  display: flex;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  border-bottom: 1px solid #eee;
+	position: relative;
+	display: flex;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	border-bottom: 1px solid #eee;
 }
 
 .skz-profile-nav__item {
-  width: 50%;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  font-size: 0;
-  outline: none;
-  background-color: transparent;
+	width: 50%;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
+	font-size: 0;
+	outline: none;
+	background-color: transparent;
 
-  &:before {
-    font-family: 'Icons';
-    font-size: 1rem;
-    color: #ccc;
-  }
+	&:before {
+		font-family: 'Icons';
+		font-size: 1rem;
+		color: #ccc;
+	}
 
-  &:focus:before {
-    color: #aaa;
-  }
+	&:focus:before {
+		color: #aaa;
+	}
 
-  &--projects:before {
-    content: '\EA9D';
-  }
+	&--projects:before {
+		content: '\EA9D';
+	}
 
-  &--settings:before {
-    content: '\EA49';
-  }
+	&--settings:before {
+		content: '\EA49';
+	}
 }
 
 .skz-profile-nav--1 .skz-profile-nav__item:nth-child(1):before,
 .skz-profile-nav--2 .skz-profile-nav__item:nth-child(2):before,
 .skz-profile-nav--3 .skz-profile-nav__item:nth-child(3):before {
-  color: #333;
+	color: #333;
 }
 
 /**
@@ -239,21 +221,21 @@ input[type='radio']:checked + .skz-profile__modal-label:after {
    */
 
 .skz-profile-nav__indicator {
-  position: absolute;
-  width: calc((100% - 1rem) / 2);
-  height: 2px;
-  bottom: -1px;
-  left: 0.5rem;
-  background-color: #ff1721;
-  transition: transform linear 0.2s;
+	position: absolute;
+	width: calc((100% - 1rem) / 2);
+	height: 2px;
+	bottom: -1px;
+	left: 0.5rem;
+	background-color: #ff1721;
+	transition: transform linear 0.2s;
 }
 
 .skz-profile-nav--1 .skz-profile-nav__indicator {
-  transform: translateX(0);
+	transform: translateX(0);
 }
 
 .skz-profile-nav--2 .skz-profile-nav__indicator {
-  transform: translateX(100%);
+	transform: translateX(100%);
 }
 
 /**
@@ -261,79 +243,79 @@ input[type='radio']:checked + .skz-profile__modal-label:after {
    */
 
 .skz-profile-content__item {
-  display: none;
-  padding: 1rem;
-  font-size: 0.8rem;
+	display: none;
+	padding: 1rem;
+	font-size: 0.8rem;
 }
 
 .skz-profile-content--1 .skz-profile-content__item:nth-child(1),
 .skz-profile-content--2 .skz-profile-content__item:nth-child(2),
 .skz-profile-content--3 .skz-profile-content__item:nth-child(3) {
-  display: block;
+	display: block;
 }
 
 .skz-profile-toggle {
-  position: absolute;
-  top: 25%;
-  right: 0;
-  width: 1rem;
-  height: 50%;
-  font-size: 0;
-  z-index: 2;
-  cursor: pointer;
-  border: none;
-  outline: none;
-  background-color: rgba(255, 255, 255, 0.2);
-  transform: translateY(-50%);
-  transition: background-color linear 0.2s;
+	position: absolute;
+	top: 25%;
+	right: 0;
+	width: 1rem;
+	height: 50%;
+	font-size: 0;
+	z-index: 2;
+	cursor: pointer;
+	border: none;
+	outline: none;
+	background-color: rgba(255, 255, 255, 0.2);
+	transform: translateY(-50%);
+	transition: background-color linear 0.2s;
 
-  &:hover,
-  &:focus {
-    background-color: rgba(255, 255, 255, 0.5);
-  }
+	&:hover,
+	&:focus {
+		background-color: rgba(255, 255, 255, 0.5);
+	}
 }
 
 .skz-sidebar--hidden .skz-profile-toggle:before {
-  transform: rotateZ(180deg);
+	transform: rotateZ(180deg);
 }
 
 .skz-sidebar--hidden .skz-profile:after {
-  content: '';
-  position: absolute;
-  z-index: 2;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background-color: #eee;
-  animation: fadeIn 0.3s;
+	content: '';
+	position: absolute;
+	z-index: 2;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	background-color: #eee;
+	animation: fadeIn 0.3s;
 }
 
 @media (prefers-color-scheme: dark) {
-  .skz-profile-name {
-    color: #ccc;
-  }
+	.skz-profile-name {
+		color: #ccc;
+	}
 
-  .skz-avatar__image {
-    border-color: #555;
-    background-color: #333;
-  }
+	.skz-avatar__image {
+		border-color: #555;
+		background-color: #333;
+	}
 
-  .skz-profile-nav {
-    border-bottom-color: #333;
-  }
+	.skz-profile-nav {
+		border-bottom-color: #333;
+	}
 
-  .skz-profile-nav__item:before {
-    color: #111;
-  }
+	.skz-profile-nav__item:before {
+		color: #111;
+	}
 
-  .skz-profile-nav--1 .skz-profile-nav__item:nth-child(1):before,
-  .skz-profile-nav--2 .skz-profile-nav__item:nth-child(2):before,
-  .skz-profile-nav--3 .skz-profile-nav__item:nth-child(3):before {
-    color: #ccc;
-  }
+	.skz-profile-nav--1 .skz-profile-nav__item:nth-child(1):before,
+	.skz-profile-nav--2 .skz-profile-nav__item:nth-child(2):before,
+	.skz-profile-nav--3 .skz-profile-nav__item:nth-child(3):before {
+		color: #ccc;
+	}
 
-  .skz-profile-content__item {
-    color: #ccc;
-  }
+	.skz-profile-content__item {
+		color: #ccc;
+	}
 }
