--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,106 +9,12 @@
 	width: 100%;
 	height: 100%;
 	-webkit-app-region: drag;
-}
-
-.window-controls {
-	display: grid;
-	grid-template-columns: repeat(3, 32px);
-	position: absolute;
-	top: 0;
-	right: 0;
-	height: 100%;
-	font-size: 10px;
-	-webkit-app-region: no-drag;
-}
-
-.window-controls .button {
-	position: relative;
-	grid-row: 1 / span 1;
-	user-select: none;
-	cursor: default;
-	vertical-align: middle;
-	border: 0;
-	background-color: transparent;
-}
-
-.window-controls .button:before {
-	content: '';
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	width: 16px;
-	height: 16px;
-	border-radius: 50%;
-	background-color: rgba(33, 33, 33, 0.8);
-	transform: translateX(-50%) translateY(-50%);
-}
-
-.window-controls .button:after {
-	content: attr(data-icon);
-	opacity: 0;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	width: 16px;
-	height: 16px;
-	line-height: 16px;
-	font-family: sans-serif;
-	font-size: 0.6rem;
-	transform: translateX(-50%) translateY(-50%);
-}
-
-.window-controls .button:hover:after {
-	opacity: 1;
-}
-
-.window-controls .min-button {
-	grid-column: 1;
-}
-
-.window-controls .max-button,
-.window-controls .restore-button {
-	grid-column: 2;
-}
-
-.window-controls .close-button {
-	grid-column: 3;
-}
-
-.window-controls .close-button:before {
-	background-color: #fe6057;
-}
-
-.window-controls .min-button:before {
-	background-color: #ffbf2b;
-}
-
-.window-controls .restore-button:before,
-.window-controls .max-button:before {
-	background-color: #28cd41;
-}
-
-.window-controls .restore-button {
-	display: none;
-}
-
-.window-title {
-	grid-column: 1;
 	display: flex;
-	align-items: center;
-	font-size: 0.8rem;
-	line-height: 1;
-	color: #333;
-	font-family: sans-serif;
-	padding-left: 0.5rem;
-	overflow-x: hidden;
-}
+	flex-direction: row;
 
-.window-title .titlebar-title {
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	padding-left: 0.5rem;
+	&--windows {
+		justify-content: flex-end;
+	}
 }
 
 @media (prefers-color-scheme: dark) {
