--- a/src/components/Settings/Settings.scss
+++ b/src/components/Settings/Settings.scss
@@ -3,355 +3,337 @@
  */
 
 .skz-settings {
-  position: relative;
-  overflow: hidden;
-  height: calc(100vh - 250px);
+	position: relative;
+	overflow: hidden;
+	height: calc(100vh - 250px);
 }
 
 .skz-settings-version {
-  position: relative;
-  display: block;
-  width: 100%;
-  background-color: transparent;
-  cursor: pointer;
-  padding-top: 0.8rem;
-  text-align: center;
-  padding-bottom: 0.8rem;
-  font-size: 0.7rem;
-  color: #888;
+	position: relative;
+	display: block;
+	width: 100%;
+	background-color: transparent;
+	cursor: pointer;
+	padding-top: 0.8rem;
+	text-align: center;
+	padding-bottom: 0.8rem;
+	font-size: 0.7rem;
+	color: #888;
 }
 
 .skz-settings-logout {
-  position: absolute;
-  bottom: 0;
-  display: block;
-  width: 100%;
-  color: #333;
-  text-align: center;
-  cursor: pointer;
-  font-size: 0.8rem;
-  border-radius: 4px;
-  padding: 1rem;
-  background-color: #f5f5f5;
-  transition: background-color linear 0.2s;
+	position: absolute;
+	bottom: 0;
+	display: block;
+	width: 100%;
+	color: #333;
+	text-align: center;
+	cursor: pointer;
+	font-size: 0.8rem;
+	border-radius: 4px;
+	padding: 1rem;
+	background-color: #f5f5f5;
+	transition: background-color linear 0.2s;
 
-  &:hover {
-    background-color: #eee;
-  }
+	&:hover {
+		background-color: #eee;
+	}
 
-  @media (prefers-color-scheme: dark) {
-    color: #ccc;
-    background-color: #555;
+	@media (prefers-color-scheme: dark) {
+		color: #ccc;
+		background-color: #555;
 
-    &:hover {
-      background-color: #666;
-    }
-  }
+		&:hover {
+			background-color: #666;
+		}
+	}
 }
 
 .skz-settings-button {
-  position: relative;
-  display: block;
-  width: 100%;
-  background-color: transparent;
-  cursor: pointer;
-  text-align: left;
-  font-size: 0.8rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+	position: relative;
+	display: block;
+	width: 100%;
+	background-color: transparent;
+	cursor: pointer;
+	text-align: left;
+	font-size: 0.8rem;
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
 
-  &::after {
-    font-family: 'Icons';
-    position: absolute;
-    content: '\EA12';
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
-  }
+	&::after {
+		font-family: 'Icons';
+		position: absolute;
+		content: '\EA12';
+		top: 50%;
+		right: 0;
+		transform: translateY(-50%);
+	}
 
-  @media (prefers-color-scheme: dark) {
-    color: #ccc;
-  }
+	@media (prefers-color-scheme: dark) {
+		color: #ccc;
+	}
 }
 
 .skz-settings-back {
-  display: block;
-  background-color: transparent;
-  cursor: pointer;
-  font-size: 0.8rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-right: 0.2rem;
-  margin-bottom: 0.8rem;
+	display: block;
+	background-color: transparent;
+	cursor: pointer;
+	font-size: 0.8rem;
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+	padding-right: 0.2rem;
+	margin-bottom: 0.8rem;
 
-  &::before {
-    font-family: 'Icons';
-    content: '\EA11';
-    top: 50%;
-    left: 0;
-    margin-right: 0.25rem;
-    transform: translateY(-50%);
-  }
+	&::before {
+		font-family: 'Icons';
+		content: '\EA11';
+		top: 50%;
+		left: 0;
+		margin-right: 0.25rem;
+		transform: translateY(-50%);
+	}
 
-  @media (prefers-color-scheme: dark) {
-    color: #ccc;
-  }
+	@media (prefers-color-scheme: dark) {
+		color: #ccc;
+	}
 }
 
 .skz-settings-field {
-  margin-left: -0.5rem;
-  margin-right: -0.5rem;
-  padding: 1rem 0.5rem;
+	margin-left: -0.5rem;
+	margin-right: -0.5rem;
+	padding: 1rem 0.5rem;
 }
 
 .slidable {
-  background-color: white;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  padding-top: 0;
-  transition: transform linear 0.2s;
+	background-color: white;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 100%;
+	padding-top: 0;
+	transition: transform linear 0.2s;
 
-  &--open {
-    transform: translateX(100%);
-  }
+	&--open {
+		transform: translateX(100%);
+	}
 
-  @media (prefers-color-scheme: dark) {
-    background-color: #444;
-  }
+	@media (prefers-color-scheme: dark) {
+		background-color: #444;
+	}
 }
 
 .skz-settings-field:first-child {
-  margin-top: -1rem;
+	margin-top: -1rem;
 }
 
 .skz-settings-fields:not(:first-child) {
-  border-top: 1px solid #eee;
+	border-top: 1px solid #eee;
 }
 
 .skz-settings-field label {
-  display: block;
-  margin-bottom: 1rem;
-  font-weight: bold;
-  font-size: 1rem;
+	display: block;
+	margin-bottom: 1rem;
+	font-weight: bold;
+	font-size: 1rem;
 }
 
 .skz-refresh-delay {
-  display: block;
-  width: 100%;
-  height: 1rem;
-  -webkit-appearance: none;
-  margin-bottom: 0.5rem;
-  background-color: transparent;
+	display: block;
+	width: 100%;
+	height: 1rem;
+	-webkit-appearance: none;
+	margin-bottom: 0.5rem;
+	background-color: transparent;
 
-  &::-webkit-slider-runnable-track {
-    height: 1px;
-    border: 0;
-    background-color: #ccc;
-  }
+	&::-webkit-slider-runnable-track {
+		height: 1px;
+		border: 0;
+		background-color: #ccc;
+	}
 
-  &::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    display: block;
-    width: 1rem;
-    height: 1rem;
-    background-color: #3032c1;
-    border-radius: 50%;
-    transform: translateY(-50%);
-  }
+	&::-webkit-slider-thumb {
+		-webkit-appearance: none;
+		display: block;
+		width: 1rem;
+		height: 1rem;
+		background-color: #3032c1;
+		border-radius: 50%;
+		transform: translateY(-50%);
+	}
 }
 
 .skz-refresh-button {
-  border: 0;
-  background-color: transparent;
-  text-decoration: underline;
-  cursor: pointer;
+	border: 0;
+	background-color: transparent;
+	text-decoration: underline;
+	cursor: pointer;
 
-  &:hover {
-    text-decoration: none;
-  }
+	&:hover {
+		text-decoration: none;
+	}
 }
 
 .skz-settings-switchs {
-  display: flex;
-  align-items: center;
+	display: flex;
+	align-items: center;
 
-  span {
-    width: 75%;
-    margin-right: 1rem;
-    margin-bottom: 1rem;
-  }
+	span {
+		width: 75%;
+		margin-right: 1rem;
+		margin-bottom: 1rem;
+	}
 
-  input {
-    display: none;
-  }
+	input {
+		display: none;
+	}
 }
 
 .skz-settings-switch:disabled + .skz-settings-switch-label {
-  background-color: #c91432;
+	background-color: #c91432;
 }
 
 .skz-settings-switch-label {
-  position: relative;
-  display: block;
-  background-color: #e5e5e5;
-  width: 40px;
-  height: 20px;
-  border-radius: 20px;
-  border: 3px solid #eee;
-  transition: background-color linear 0.1s;
+	position: relative;
+	display: block;
+	background-color: #e5e5e5;
+	width: 40px;
+	height: 20px;
+	border-radius: 20px;
+	border: 3px solid #eee;
+	transition: background-color linear 0.1s;
 }
 
 .skz-settings-switch {
-  &:checked {
-    + label {
-      background-color: #1cc54e;
-    }
+	&:checked {
+		+ label {
+			background-color: #1cc54e;
+		}
 
-    + label:before {
-      transform: translateY(-50%) translateX(100%);
-    }
-  }
+		+ label:before {
+			transform: translateY(-50%) translateX(100%);
+		}
+	}
 
-  + label:before {
-    position: absolute;
-    content: '';
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background-color: #ffffff;
-    transition: transform linear 0.1s;
-  }
+	+ label:before {
+		position: absolute;
+		content: '';
+		top: 50%;
+		left: 0;
+		transform: translateY(-50%);
+		width: 20px;
+		height: 20px;
+		border-radius: 50%;
+		background-color: #ffffff;
+		transition: transform linear 0.1s;
+	}
 }
 
 .skz-organizations__intro {
-  margin-bottom: 1rem;
+	margin-bottom: 1rem;
 }
 
 .skz-organizations__list {
-  list-style: none;
+	list-style: none;
 
-  li {
-    position: relative;
-    margin-bottom: 0.5rem;
-    padding-left: 1.5rem;
-  }
+	li {
+		position: relative;
+		margin-bottom: 0.5rem;
+		padding-left: 1.5rem;
+	}
 
-  [type='checkbox'] {
-    position: absolute;
-    left: 0;
-    top: 0;
-    visibility: hidden;
+	[type='checkbox'] {
+		position: absolute;
+		left: 0;
+		top: 0;
+		visibility: hidden;
 
-    &:disabled,
-    &:disabled + label {
-      opacity: 0.5;
-    }
+		&:disabled,
+		&:disabled + label {
+			opacity: 0.5;
+		}
 
-    &:before {
-      visibility: visible;
-      content: '';
-      display: block;
-      width: 1rem;
-      height: 1rem;
-      border: 1px solid #ccc;
-    }
+		&:before {
+			visibility: visible;
+			content: '';
+			display: block;
+			width: 1rem;
+			height: 1rem;
+			border: 1px solid #ccc;
+		}
 
-    &:after {
-      visibility: visible;
-      content: '\EABA';
-      position: absolute;
-      left: 0.1rem;
-      top: 0.1rem;
-      width: 1rem;
-      height: 1rem;
-      font-family: 'Icons';
-      transform: scale(0);
-      transition: transform linear 0.1s;
+		&:after {
+			visibility: visible;
+			content: '\EABA';
+			position: absolute;
+			left: 0.1rem;
+			top: 0.1rem;
+			width: 1rem;
+			height: 1rem;
+			font-family: 'Icons';
+			transform: scale(0);
+			transition: transform linear 0.1s;
 
-      @media (prefers-color-scheme: dark) {
-        color: #ccc;
-      }
-    }
+			@media (prefers-color-scheme: dark) {
+				color: #ccc;
+			}
+		}
 
-    &:checked:after {
-      transform: scale(1);
-    }
-  }
+		&:checked:after {
+			transform: scale(1);
+		}
+	}
 }
 
 .skz-themes {
-  list-style: none;
+	list-style: none;
 }
 
 .skz-theme {
-  position: relative;
-  &:not(:last-child) {
-    margin-bottom: 1rem;
-  }
+	position: relative;
+	&:not(:last-child) {
+		margin-bottom: 1rem;
+	}
 
-  [type='radio'] {
-    display: none;
-  }
+	[type='radio'] {
+		display: none;
+	}
 
-  [type='radio']:checked + &__gradient {
-    &:before {
-      content: '\EAB9';
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      font-size: 1.5rem;
-      font-family: 'Icons';
-      transform: translateX(-50%) translateY(-50%);
-    }
-  }
+	[type='radio']:checked + &__gradient {
+		&:before {
+			content: '\EAB9';
+			position: absolute;
+			left: 50%;
+			top: 50%;
+			font-size: 1.5rem;
+			font-family: 'Icons';
+			transform: translateX(-50%) translateY(-50%);
+		}
+	}
 
-  &__gradient {
-    cursor: pointer;
-    display: block;
-    width: 100%;
-    height: 4rem;
-    font-size: 0;
-    border-radius: 4px;
-    transition: opacity linear 0.2s;
+	&__gradient {
+		cursor: pointer;
+		display: block;
+		width: 100%;
+		height: 4rem;
+		font-size: 0;
+		border-radius: 4px;
+		transition: opacity linear 0.2s;
 
-    &:hover {
-      opacity: 0.8;
-    }
+		&:hover {
+			opacity: 0.8;
+		}
 
-    &--1 {
-      background: linear-gradient(
-        135deg,
-        rgba(2, 113, 128, 1) 0%,
-        rgba(2, 113, 128, 1) 24%,
-        rgba(0, 173, 198, 1) 77%,
-        rgba(0, 173, 198, 1) 100%
-      );
-    }
+		&--1 {
+			background: linear-gradient(135deg, #48c6ef, #6f86d6);
+		}
 
-    &--2 {
-      background: linear-gradient(
-        135deg,
-        rgba(128, 63, 2, 1) 0%,
-        rgba(128, 63, 2, 1) 24%,
-        rgba(198, 113, 0, 1) 77%,
-        rgba(198, 113, 0, 1) 100%
-      );
-    }
+		&--2 {
+			background: linear-gradient(135deg, #fc7864, #fda366);
+		}
 
-    &--3 {
-      background: linear-gradient(
-        135deg,
-        rgba(78, 1, 65, 1) 0%,
-        rgb(107, 1, 89) 24%,
-        rgb(148, 0, 123) 77%,
-        rgb(209, 1, 174) 100%
-      );
-    }
-  }
+		&--3 {
+			background: linear-gradient(135deg, #667eea, #764ba2);
+		}
+	}
 }
