--- a/src/components/Tag/Tag.scss
+++ b/src/components/Tag/Tag.scss
@@ -1,43 +1,46 @@
 .skz-tag {
-  position: relative;
-  margin-bottom: 1rem;
-  margin-right: 0.5rem;
+	position: relative;
+	margin-bottom: 1rem;
+	margin-right: 0.5rem;
 
-  &__labels {
-    position: relative;
-    font-size: 0.8rem;
-    border-radius: 0.5rem;
-    padding: 0.5rem;
-    background-color: #ddd;
-    color: #333;
-    font-weight: bold;
+	&__labels {
+		cursor: pointer;
+		font-size: 0.8rem;
+		border-radius: 0.5rem;
+		padding: 0.7rem;
+		background-color: #ddd;
+		color: #333;
+		font-weight: bold;
+		display: block;
+		width: 100px;
+		text-align: center;
 
-    &:hover {
-      background-color: #f5f5f5;
-    }
-  }
+		&:hover {
+			background-color: rgb(194, 194, 194);
+		}
+	}
 
-  &--selected &__labels {
-    background-color: #f07662;
-    color: #fff;
+	&--selected &__labels {
+		background-color: #f07662;
+		color: #fff;
 
-    &:hover {
-      background-color: #864338;
-    }
-  }
+		&:hover {
+			background-color: #e66f5d;
+		}
+	}
 
-  &__check {
-    display: none;
-  }
+	&__check {
+		display: none;
+	}
 
-  @media (prefers-color-scheme: dark) {
-    &__labels {
-      background-color: #777;
-      color: #fff;
+	@media (prefers-color-scheme: dark) {
+		&__labels {
+			background-color: #777;
+			color: #fff;
 
-      &:hover {
-        background-color: #555;
-      }
-    }
-  }
+			&:hover {
+				background-color: #555;
+			}
+		}
+	}
 }
