fix(Requester): Error 203

--- a/src/components/MainView/MainView.scss
+++ b/src/components/MainView/MainView.scss
@@ -9,7 +9,8 @@
 	&__empty {
 		position: absolute;
 		top: 50%;
-		width: 100%;
+		left: 0;
+		right: 0;
 		text-align: center;
 		transform: translateY(-50%);
 	}
