--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,103 +1,165 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-  padding-bottom: 3rem;
-  font-family: sans-serif;
-  color: #333;
-  background-color: #f5f5f5;
+	font-family: sans-serif;
+	color: #333;
+	background-color: #fff;
 }
 
-@font-face {
-  font-family: 'Icons';
-  src: url('./icons.woff');
+.skz-header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	max-width: 75rem;
+	margin: 0 auto;
+	padding: 0 1rem;
 }
 
-.logo {
-  display: block;
-  width: 100%;
-  max-width: 200px;
-  height: auto;
-  margin: 0 auto;
+.skz-logo {
+	display: block;
+	width: auto;
+	height: 4rem;
 }
 
-.title {
-  margin-bottom: 2rem;
-  text-align: center;
+.skz-nav a {
+	color: #fff;
+	text-decoration: none;
+	font-weight: bold;
 }
 
-p {
-  font-weight: 100;
+.skz-github {
+	color: #fff;
+	text-decoration: none;
+	font-size: 0.8rem;
+	padding: 0.2rem 0.5rem;
+	border-radius: 3rem;
+	border: 1px solid #fff;
 }
 
-.download {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0 -0.5rem;
-  text-align: center;
+.skz-nav a:not(:last-child) {
+	margin-right: 2rem;
 }
 
-.download a {
-  flex: 1 1 auto;
-  display: inline-block;
-  margin: 0 0.5rem 1rem;
-  padding: 1rem 1.2rem;
-  color: #fff;
-  font-weight: 100;
-  font-size: 1rem;
-  text-decoration: none;
-  border-radius: 4px;
-  background-color: #00008f;
-  transition: background-color linear 0.2s;
+.skz-hero {
+	position: relative;
+	min-height: 40rem;
+	height: 30vh;
+	margin-bottom: 10rem;
+	background: linear-gradient(to bottom, #ff512f, #f09819);
 }
 
-.download a:hover {
-  background-color: #3032c1;
+.skz-title {
+	margin-top: 3rem;
+	margin-bottom: 2rem;
+	text-align: center;
+	font-size: 3rem;
+	color: #fff;
 }
 
-section:not(:last-child) {
-  margin-bottom: 4rem;
+.skz-download {
+	position: relative;
+	z-index: 2;
+	display: inline-block;
+	padding: 1rem 2rem;
+	color: #fff;
+	font-weight: bold;
+	font-size: 1.3rem;
+	text-decoration: none;
+	border: 2px solid #fff;
+	border-radius: 4rem;
+	cursor: pointer;
+	opacity: 0.5;
 }
 
-section {
-  width: calc(100% - 2rem);
-  max-width: 50rem;
-  margin: 0 auto;
+.skz-download[href] {
+	opacity: 1;
 }
 
-.screenshot {
-  width: 100%;
-  margin-bottom: 2rem;
-  border-radius: 4px;
-  box-shadow: 0 0 15px #ccc;
+.skz-illustration {
+	position: absolute;
+	left: 50%;
+	bottom: -10rem;
+	height: 35rem;
+	transform: translateX(-50%);
 }
 
-.content h2 {
-  margin-bottom: 1rem;
+.skz-hero-content {
+	text-align: center;
 }
 
-.secondary {
-  display: flex;
-  position: relative;
+.skz-details {
+	position: relative;
+	width: 100%;
+	max-width: 75rem;
+	margin: 0 auto;
 }
 
-.secondary:before {
-  flex: 0 0 auto;
-  width: 4rem;
-  height: 4rem;
-  margin-right: 1rem;
-  text-align: center;
-  line-height: 4rem;
-  font-family: 'Icons';
-  font-size: 2rem;
-  color: #fff;
-  border-radius: 50%;
-  background-color: #00008f;
+.skz-details img {
+	float: left;
+	width: 400px;
+	height: auto;
+	margin-right: 2rem;
+	box-shadow: 5px 5px 10px #ccc;
 }
 
-.secondary--favorites:before { content: '\EB00'; }
-.secondary--notifications:before { content: '\EA32'; }
-.secondary--teams:before { content: '\EB1B'; }
+.skz-details:nth-child(even) {
+	margin-top: 8rem;
+	margin-bottom: 8rem;
+	color: #fff;
+}
+
+.skz-details:nth-child(even) p {
+	color: #fff;
+}
+
+.skz-details:nth-child(even):before {
+	content: '';
+	position: absolute;
+	left: -50vw;
+	right: -50vw;
+	top: -3rem;
+	bottom: -3rem;
+	background-color: #f09819;
+	transform: skewY(-2deg);
+}
+
+.skz-detail {
+	position: relative;
+	z-index: 1;
+	margin-bottom: 5rem;
+}
+
+.skz-detail h2 {
+	margin-bottom: 1rem;
+	font-size: 2rem;
+}
+
+.skz-detail p {
+	font-size: 1.3rem;
+	color: #444;
+}
+
+.skz-footer {
+	text-align: center;
+	color: #fff;
+	font-size: 0.8rem;
+	padding: 3rem;
+	background: linear-gradient(to bottom, #f09819, #ff512f);
+}
+
+.skz-footer .skz-download {
+	margin-bottom: 2rem;
+}
+
+.skz-footer a {
+	color: #fff;
+}
+
+.skz-content {
+	overflow: hidden;
+}
