--- a/src/components/Tag/Tag.scss
+++ b/src/components/Tag/Tag.scss
@@ -14,6 +14,7 @@
 		display: block;
 		width: 100px;
 		text-align: center;
+		transition: background-color linear 0.2s;
 
 		&:hover {
 			background-color: rgb(194, 194, 194);
