fix(pull request): button for comments display

--- a/src/components/CommentsCounter/CommentsCounter.scss
+++ b/src/components/CommentsCounter/CommentsCounter.scss
@@ -1,20 +1,27 @@
 .skz-comments-counter {
-  font-size: 0.8rem;
-  color: #aaa;
-  animation: fadeIn 0.2s;
+	font-size: 0.8rem;
+	color: #aaa;
+	animation: fadeIn 0.2s;
+	padding: 0.2rem 0.5rem;
+	border-radius: 4px;
+	transition: background-color linear 0.2s;
 
-  &:after {
-    content: '\EA4C';
-    margin-left: 0.25rem;
-    font-family: 'Icons';
-    vertical-align: bottom;
-  }
+	&:after {
+		content: '\EA4C';
+		margin-left: 0.25rem;
+		font-family: 'Icons';
+		vertical-align: bottom;
+	}
 
-  &--all-resolved {
-    color: #9fd9b4;
-  }
+	&--all-resolved {
+		color: #9fd9b4;
+	}
 
-  &--responses {
-    color: #d87c7c;
-  }
+	&--responses {
+		color: #d87c7c;
+	}
+
+	&:hover {
+		background-color: #eee;
+	}
 }
