--- a/public/global.css
+++ b/public/global.css
@@ -27,8 +27,10 @@ body {
 }
 
 body {
+	display: flex;
+	flex-direction: column;
 	overflow: hidden;
-	background-color: white;
+	background-color: #333;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans,
 		Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 }
