--- a/src/components/Labels/Labels.scss
+++ b/src/components/Labels/Labels.scss
@@ -1,7 +1,5 @@
 .skz-pullrequest__labels {
 	flex: 1 1 auto;
-	margin-left: 0.5rem;
-	margin-right: 0.5rem;
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
@@ -11,13 +9,12 @@
 	padding: 0.2rem;
 	font-size: 0.6rem;
 	font-weight: normal;
-	color: #888;
+	color: #fff;
 	line-height: 1.5rem;
 	text-align: center;
 	line-height: 1;
 	vertical-align: middle;
-	border-radius: 4px;
-	background-color: #eee;
+	background-color: #555;
 
 	&:not(:last-child) {
 		margin-right: 0.2rem;
