--- a/docs/styles.css
+++ b/docs/styles.css
@@ -55,7 +55,7 @@ body {
 	z-index: 2;
 	display: inline-block;
 	padding: 1rem 2rem;
-	color: #fff;
+	color: #000;
 	font-weight: bold;
 	font-size: 1.3rem;
 	text-decoration: none;
@@ -162,7 +162,7 @@ body {
 	margin: auto;
 }
 
-.skz-footer a {
+.skz-footer a:not(.skz-footer) {
 	color: #fff;
 }
 
